[package]
name = "tcolr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ansi_term = "0.12.1"
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }
image = "0.25.1"
reqwest = { version = "0.12.4", features = ["blocking"] }
